--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <title></title>
   </head>
   <body>
-    <h1>Search up any movie!</h1>
-    <input id="movie" type="text" name="" value="" />
+    <h1>Let's predict the gender of the main actor in your favorite movie!</h1>
+    <input id="input" type="text" name="" value="" />
     <button type="button" name="button"></button> <img src="" alt="" />
-    <h2></h2>
     <p></p>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
