--- a/index.html
+++ b/index.html
@@ -9,16 +9,11 @@
     
 </head>
 <body>
-    <h1>List of old News Agencys </h1>
-<form action="">
-    <input type="text" placeholder='State 'id = "input"></input>
-    <button>Send</button>
-</form>
-<section id= "alpha"></section>
+    <h1>Strains and Description </h1>
+  
+    <button>Recipes</button>
 
-
-
-
+<ul></ul>
 
     <script src="js/main.js"></script>
 </body>
