--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="master.css">
     <meta charset="utf-8">
     <title></title>
   </head>
@@ -10,14 +11,14 @@
     <form class="" action="index.html" method="post">
 
     </form>
-    <button type="button" id="second" name="button">Choose this astronaut's Star Wars character</button>
-    <p id="name"></p>
+    <button type="button" id="second" name="button">What Star Wars character would they be?</button>
+    <section><p id="name"></p>
     <p id="height"></p>
     <p id="mass"></p>
     <p id="eye"></p>
     <p id="skin"></p>
     <p id="birthday"></p>
-    <p id="sex"></p>
+    <p id="sex"></p></section>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
