Added styling and added more to index.html

--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Country</title>
   </head>
   <body>
-    <h1></h1>
-    <input id="name" name="" value="">
+    <h1>Name Popularity </h1>
+    <section>
+     <input id="name" name="" value="">
+     <button type="button"   name="button">Click here for a suprise</button>
+    </section>
+    <!-- <section class="show"> -->
+     <h3 id="result">This name is the most popular in the country of: </h3>
 
-    <button type="button" name="button">Click here for a suprise</button>
-    <div class="">
-      <h3 id="result">This name is the most popular in the country of: </h3>
-    </div>
-    <h4>Below is the top story headline in the language of where your name is the most popular.</h4>
-    <p id="headline"></p>
+     <h4>Below is the top story headline in  the language of where your name is the  most popular:</h4>
+     <p>*Disclaimer: Some names may not have a top story headline for the current day</p>
+     <p>"<span id="headline"></span>"</p>
+    <!-- </section> -->
 
     <script type="text/javascript" src="main.js">
 
