updated second api call

--- a/index.html
+++ b/index.html
@@ -2,18 +2,32 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Complex 1</title>
+    <title>Complex 2</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <label>Choose a Meal Category:
-      <select class="mealSelection" name="mealChoice">
-        <option value="">Select One</option>
-      </select>
-    </label>
+    <h1>Looking for some cooking inspiration?</h1>
+    <span class="description">Simply enter a letter to be given a list of recipes to choose from.</span>
+    <form class="" action="index.html" method="post">
+      <input class="userInput" type="text" name="" value="" placeholder="Please Enter a Letter">
+      <button class="button" type="button" name="button">Submit</button>
+    </form>
+    <span class="userIngredient"></span>
+    <table class="u-full-width">
+      <thead>
+      <tr>
+        <th>Recipe Title</th>
+        <th>Recipe Link</th>
+
+      </tr>
+      </thead>
+      <tbody id="recipe-list"</tbody>
+    </table>
 
 
-    <script type="text/javascript" src="js/app.js">
-    </script>
+
+
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
