--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   </head>
   <body>
 
-      <h1>Emotional Care: <span>Let this Meow Support You.</span></h1>
-      <button id="yes" type="button" name="">WILL YOU GET A PUS PUS?</button>
+      <h1>Support</h1>
+      <p>Click the button below for a cute cat image</p>
+      <button id="yes" type="button" name="">WOULD YOU LIKE A CAT PHOTO?</button>
       <img src="" alt="">
       <h2 id="no"></h2>
 
     <script src="app.js"></script>
   </body>
 </html>
+
