--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Looking for some cooking inspiration?</h1>
-    <span class="description">Simply enter a letter to be given a list of recipes to choose from.</span>
+    <span>Simply enter a letter to be given a list of recipes to choose from.</span>
     <form class="" action="index.html" method="post">
       <input class="userInput" type="text" name="" value="" placeholder="Please Enter a Letter">
       <button class="button" type="button" name="button">Submit</button>
