--- a/complexAPI2/complexAPI2.html
+++ b/complexAPI2/complexAPI2.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Lyrics</title>
+    <link rel="stylesheet" href="complexAPI2.css">
+    <link href="https://fonts.googleapis.com/css?family=Crete+Round&display=swap" rel="stylesheet">
   </head>
   <body>
     <section>
