--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     </ul>
 
+    <img src="images/yoda-pic.jpeg" alt="">
+
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
