--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>What other names does your favorite artists go by?</h1>
-    <input type="text" name="" value="" placeholder="enter artist">
-    <button type="button" name="button">enter</button>
+    <input type="text" name="" value="" placeholder="Enter Artist">
+    <button type="button" name="button" class="enter">Enter</button>
+    <button type="button" name="button" class="clear">Clear</button>
     <ul id="names">
 
     </ul>
