--- a/index.html
+++ b/index.html
@@ -8,21 +8,25 @@
 		<title>Book API</title>
 
 		<!-- external CSS link -->
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Shippori+Mincho+B1:wght@400;500;700&display=swap" rel="stylesheet">
+
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 
-		<h1>Get Books and Reviews</h1>
+		<h1>Books and Reviews</h1>
 		<form class="" action="index.html" method="post">
-			<input type="text" placeholder="book Title" name="character" value="">
+			<input type="text" placeholder="Book Title" name="character" value="">
 			<button type="button" name="button">Search</button>
 		</form>
 
 		<section class="searchResults">
-			<img src="" alt="">
-			<h2 class="name">Name</h2>
-			<h3 class="Title">Title</h3>
+			<h2 class="author"></h2>
+			<h3 class="title"></h3>
+			<h3 class="genre"></h3>
+			<p class="reviews"></p>
 		</section>
 
 
