--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Enter Lyrics and Urban Dictionary them</h1>
+        <h1>Enter Lyrics & Urban Dictionary them</h1>
     </header>
     <section>
         <input id="song" type="text" placeholder="Enter Song Name">
