country flags and facts updates

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 	<body>
 
 		<h1> Country Facts & Flag Generator</h1>
-		<input id= 'input' type="text" name="" value="">
-		<button type="button" name="button"> Generate </button>
+		<section class = 'center'>
+			<input id= 'input' type="text" name="" value="">
+			<button id="input2"type="button" name="button"> Generate </button>
+		</section>
+
 		<h2> Country Name <h3 id= 'name'> </h3> </h2>
 		<h2> Population  <h3 id= 'population'> </h3></h2>
 		<h2> Region <h3 id= 'region'> </h3> </h2>
