--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">      
     <title>COMPLEX API TWO</title>
 </head>
 <body>
     <header>
         <h1>Enter Lyrics & Urban Dictionary them</h1>
     </header>
+    <h2>Highlight parts of the lyrics to get the Urban Dictionary definition!</h2>
     <section>
         <input id="song" type="text" placeholder="Enter Song Name">
         <input id="artist" type="text" placeholder="Enter Artist Name">
